fixed pom can create jar and run jar it works so dont mess with it